--- a/src/styles/ProjectsExpanded.css
+++ b/src/styles/ProjectsExpanded.css
@@ -51,7 +51,7 @@
     width: 80%;
     height: 70%;
     min-height: 26rem;
-    border: 1px solid rgb(236, 236, 236);
+    border: 1px solid var(--border);
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
@@ -107,13 +107,13 @@
 
 @keyframes flash {
     0% {
-        border: 1px solid rgb(219, 219, 219);
+        border: 1px solid var(--bg);
     }
     50% {
         border: 1px solid #60a5fa;
     }
     0% {
-        border: 1px solid rgb(219, 219, 219);
+        border: 1px solid var(--bg);
     }
 }
 
